# room_mate

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.claude/: launch.json
.codex/: config.toml
docs/: CODING-CONVENTIONS.md  HANDOVER-comparison-sources.md  HANDOVER-ui-layout.md  PLAN-handover-actioning.md  README.md  STRATEGY-BROWSER.md  STRATEGY-MCP.md  STRATEGY-SERVER.md  STRATEGY-SOURCES.md  STRATEGY.md  mcp-host-setup.md
docs/Superseded/: HANDOVER-area-label-sizing.md  HANDOVER-colour-picker-fix.md  HANDOVER-colour-plans.md  HANDOVER-comparison-sources.md  HANDOVER-georeferencing.md  HANDOVER-gzip.md  HANDOVER-hierarchy-areas.md  HANDOVER-html-review.md  HANDOVER-milestone-comparison.md  HANDOVER-milestone-drofus-pinning.md  HANDOVER-multizone-viewer.md  HANDOVER-per-project-settings.md  HANDOVER-project-picker.md  HANDOVER-review-fixes.md  HANDOVER-selection-persistence.md  HANDOVER-service-layer.md  HANDOVER-streaming-sender.md  HANDOVER-streaming.md  HANDOVER-svg-export.md  HANDOVER-units-and-georeferencing.md  HANDOVER-viewer-performance.md  HANDOVER_utf8.md  implementation-handoff.md  module-refactor-handover.md  settings-infrastructure-handoff.md
scripts/: gen_big_plate.py  gen_sample_plates.py  gen_showcase.py  rooms.json
settings/: drofus.csv  server.toml  test_snapshot.json
settings/projects/: Das.toml  House A.toml  big-plate.toml  showcase.toml  (+1 more)
src/: bootstrap.rs  classify.rs  contract.rs  drofus.rs  handlers.rs  lib.rs  main.rs  settings_api.rs  state.rs
static/: common.js  comparison.html  index.html  settings.html  tokens.css
(+15 files in other folders)
