[package]
name = "roommate"
version = "0.1.0"
edition = "2024"

# Discovery aid, not a gate: `too_many_lines` (fires >100 lines) surfaces
# functions worth a second look. `warn`, never `deny` — a long-but-cohesive
# function carries `#[allow(clippy::too_many_lines)]` with a reason rather
# than being fragmented into single-use helpers just to hit the number.
[lints.clippy]
too_many_lines = "warn"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "decompression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1"
chrono = "0.4"
csv = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
rmcp = { version = "2.1.0", features = ["server", "macros", "transport-io", "schemars"] }
# HTTP *client* for the MCP binary's upload_drofus tool, which forwards to the
# running HTTP server (the single writer) instead of writing the store itself.
# default-features = false: the target is loopback plain HTTP, no TLS stack.
reqwest = { version = "0.12", default-features = false }
geo = "0.33.1"
